<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015 ESU electronic solutions ulm GmbH & Co KG
  ~
  ~ This software may be modified and distributed under the terms
  ~ of the MIT license. See the LICENSE file for details.
  -->

<resources>

    <string name="app_name">Mobile Control II SDK Sample</string>
    <string name="button">Button</string>
    <string name="throttle">Throttle</string>
    <string name="leds">LEDs</string>
    <string name="red">Red</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="flash">flash</string>
    <string name="green">Green</string>
    <string name="position">Position</string>
    <string name="speed_step">Speed step</string>
    <string name="speed_steps">Speed steps</string>
    <string name="stop">Stop</string>
    <string name="physical_slider">Physical Slider</string>
    <string name="physical_slider_position">Slider Position</string>

</resources>
